#43 Tagging Functionality Backend
