# backend-fap/src/tags/dto/tag-reference.dto.ts
@@ -1,0 +1,19 @@
+import { AutoMap } from '@automapper/classes';
+import { IsEnum, IsNumber, IsOptional, IsString } from 'class-validator';
+import { TagType } from '../tagtype.enum';
+
+export class TagReferenceDto {
+  @AutoMap()
+  @IsNumber()
+  id: number;
+
+  @AutoMap()
+  @IsEnum(TagType)
+  @IsOptional()
+  type?: TagType;
+
+  @AutoMap()
+  @IsString()
+  @IsOptional()
+  value?: string;
+}
